Bug 545715 - [12] Assignment analysis doesn't work in switch statement with ->